--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -rf ./dist ./.cache",
     "dev": "parcel ./src/index.html --open --no-autoinstall",
-    "prod": "npm run clean &&  parcel build ./src/index.html --no-source-maps --public-url ./"
+    "prod": "parcel build ./src/index.html --no-source-maps --public-url ./"
   },
   "keywords": [],
   "author": "",
