--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
-  "name": "tailwind",
+  "name": "fox-game",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf ./dist ./.cache",
-    "dev": "parcel ./src/index.html --open --no-autoinstall",
-    "prod": " npm run clean &&parcel build ./src/index.html --no-source-maps --public-url ./"
+    "start": "parcel ./src/index.html --open --no-autoinstall",
+    "build": " npm run clean &&parcel build ./src/index.html --no-source-maps --public-url ./"
   },
+  "browserslist": [
+    "last 2 Firefox versions"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.4.6"
   }
 }
